<resources>
    <string name="app_name">HELLO ANDROID</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="bigButton">BigButton</string>
    <string name="androidPractice">Android Practice</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="constraint_layout" translatable="false">constraint_layout</string>
    <string name="hello" translatable="false">Hello</string>
    <string name="githubLogo" translatable="false">githubLogo</string>
    <string name="signup" translatable="false">Signup</string>
    <string name="constraintButton" translatable="false">ToConstraint</string>
    <string name="login" translatable="false">Login</string>
    <string name="aware" translatable="false">aware</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPassword">Forgot passowrd?</string>
    <string name="orConnectMe">or connect me</string>
    <string name="signupWithEmail">Sign Up with E-mail</string>
    <string name="toConstraint">ToConstraint</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="fragment">Fragment</string>
    <string name="android">Android</string>
    <string name="java">Java</string>
    <string name="android_description">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="java_description">Java is a High Level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
    <string name="recycler_view">Recycler View</string>
    <string name="avatar_demo">It is the avatar demo</string>
    <string name="end">It is end!</string>
    <string name="timer">timer</string>
    <string name="start">start</string>
    <string name="handler">Handler</string>
    <string name="handler_one">Handler One</string>
    <string name="handler_two">Handler Two</string>
    <string name="rxjava">RxJava</string>
    <string name="share_preference">Share reference</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="tips">Tips:\nClick "I Agree", Jump Main Page</string>
    <string name="i_agree">I AGREE</string>
    <string name="moments">Moments</string>
    <string name="user_avatar">it is user avatar</string>
</resources>