<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="@dimen/constant_40dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/constant_20dp"
        android:paddingEnd="@dimen/constant_20dp"
        android:text="@string/androidPractice"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/constant_20dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/constant_80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/ToConstraintButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/constant_20dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/toConstraint" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/constant_20dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/login" />

            <Button
                android:id="@+id/pickContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/constant_20dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/pick_contact" />

            <Button
                android:id="@+id/fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/constant_20dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/fragment" />

            <Button
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/constant_20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/recycler_view"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/constant_20dp"
                android:text="@string/timer" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/constant_20dp"
                android:background="@color/teal_700"
                android:text="@string/button7" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/constant_20dp"
                android:backgroundTintMode="@color/teal_700"
                android:text="@string/button8" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>