<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/grey"
        android:textAllCaps="false"
        android:text="@string/button1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:backgroundTint="@color/grey"
        android:text="@string/button2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/bigButton"/>


</LinearLayout>